--- a/templates/layout.html
+++ b/templates/layout.html
@@ -83,75 +83,74 @@
         </div>
         <!-- End Preloader -->
 
-        <!-- Start Top Header Area -->
-        <div class="top-header-area bg-ffffff">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="breaking-news-content">
-                            <h6 class="breaking-title">
-                                Breaking News:
-                            </h6>
+        {% if not request|is_mobile %}
+            <!-- Start Top Header Area -->
+            <div class="top-header-area bg-ffffff">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6">
+                            <div class="breaking-news-content">
+                                <h6 class="breaking-title">
+                                    Inkuru cyashya:
+                                </h6>
 
-                            <div class="breaking-news-slides owl-carousel owl-theme">
-                                <div class="single-breaking-news"> 
-                                    <p>
-                                        <a href="#">Entertainment activists started again a few months later</a>
-                                    </p>
-                                </div>
+                                <div class="breaking-news-slides owl-carousel owl-theme">
+                                    {% for post in posts %}
+                                        <div class="single-breaking-news">
+                                            <p>
+                                                <a href="{{ post.get_absolute_url }}">{{ post.title|title }}</a>
+                                            </p>
+                                        </div>
+                                    {% endfor %}
 
-                                <div class="single-breaking-news"> 
-                                    <p>
-                                        <a href="#">Entertainment activists started again a few months later</a>
-                                    </p>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="col-lg-6 text-right">
-                        <ul class="top-header-others">
-                            <li>
-                                <div class="dropdown language-switcher d-inline-block">
-                                    <button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <span>Language <i class='bx bx-chevron-down'></i></span>
-                                    </button>
+                        <div class="col-lg-6 text-right">
+                            <ul class="top-header-others">
+                                <li>
+                                    <div class="dropdown language-switcher d-inline-block">
+                                        <button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <span>Language <i class='bx bx-chevron-down'></i></span>
+                                        </button>
 
-                                    <div class="dropdown-menu">
-                                        <a href="#" class="dropdown-item d-flex align-items-center">
-                                            <img src="assets/img/english.png" class="shadow-sm" alt="flag">
-                                            <span>English</span>
-                                        </a>
-                                        <a href="#" class="dropdown-item d-flex align-items-center">
-                                            <img src="assets/img/arab.png" class="shadow-sm" alt="flag">
-                                            <span>العربيّة</span>
-                                        </a>
-                                        <a href="#" class="dropdown-item d-flex align-items-center">
-                                            <img src="assets/img/germany.png" class="shadow-sm" alt="flag">
-                                            <span>Deutsch</span>
-                                        </a>
-                                        <a href="#" class="dropdown-item d-flex align-items-center">
-                                            <img src="assets/img/portugal.png" class="shadow-sm" alt="flag">
-                                            <span>Português</span>
-                                        </a>
-                                        <a href="#" class="dropdown-item d-flex align-items-center">
-                                            <img src="assets/img/china.png" class="shadow-sm" alt="flag">
-                                            <span>简体中文</span>
-                                        </a>
+                                        <div class="dropdown-menu">
+                                            <a href="#" class="dropdown-item d-flex align-items-center">
+                                                <img src="assets/img/english.png" class="shadow-sm" alt="flag">
+                                                <span>English</span>
+                                            </a>
+                                            <a href="#" class="dropdown-item d-flex align-items-center">
+                                                <img src="assets/img/arab.png" class="shadow-sm" alt="flag">
+                                                <span>العربيّة</span>
+                                            </a>
+                                            <a href="#" class="dropdown-item d-flex align-items-center">
+                                                <img src="assets/img/germany.png" class="shadow-sm" alt="flag">
+                                                <span>Deutsch</span>
+                                            </a>
+                                            <a href="#" class="dropdown-item d-flex align-items-center">
+                                                <img src="assets/img/portugal.png" class="shadow-sm" alt="flag">
+                                                <span>Português</span>
+                                            </a>
+                                            <a href="#" class="dropdown-item d-flex align-items-center">
+                                                <img src="assets/img/china.png" class="shadow-sm" alt="flag">
+                                                <span>简体中文</span>
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
+                                </li>
 
-                            <li>
-                                <i class='bx bx-user'></i>
-                                <a href="login.html">Login</a>
-                            </li>
-                        </ul>
+                                <li>
+                                    <i class='bx bx-user'></i>
+                                    <a href="login.html">Login</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- End Top Header Area -->
+            <!-- End Top Header Area -->
+        {% endif %}
 
         <!-- Start Navbar Area -->
         <div class="navbar-area">
