--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -30,7 +30,6 @@
 {% endblock dij %}
 
 {% block loading_text %}
-    <p>Gukurura...</p>
     <span>{{ post.title|title }}</span>
 {% endblock %}
 
@@ -115,7 +114,7 @@
                             </div>
 
                             <div class="comments-area">
-                                <h3 class="comments-title">3 Comments:</h3>
+                                <h3 class="comments-title">{{ post.comments.count }} Comments:</h3>
 
                                 <ol class="comment-list">
                                     <li class="comment">
@@ -254,109 +253,10 @@
                             </section>
 
                             <section class="widget widget_popular_posts_thumb">
-                                <h3 class="widget-title">Popular posts</h3>
-
-                                <article class="item">
-                                    <a href="#" class="thumb">
-                                        <span class="fullimage cover bg1" role="img"></span>
-                                    </a>
-                                    <div class="info">
-                                        <h4 class="title usmall"><a href="#">Match between United States and England at AGD stadium</a></h4>
-                                        <span>28 September, 2020</span>
-                                    </div>
-                                </article>
-
-                                <article class="item">
-                                    <a href="#" class="thumb">
-                                        <span class="fullimage cover bg2" role="img"></span>
-                                    </a>
-                                    <div class="info">
-                                        <h4 class="title usmall"><a href="#">For the last time, he addressed the people</a></h4>
-                                        <span>28 September, 2020</span>
-                                    </div>
-                                </article>
-
-                                <article class="item">
-                                    <a href="#" class="thumb">
-                                        <span class="fullimage cover bg3" role="img"></span>
-                                    </a>
-                                    <div class="info">
-                                        <h4 class="title usmall"><a href="#">The coronavairus is finished and the outfit is busy</a></h4>
-                                        <span>28 September, 2020</span>
-                                    </div>
-                                </article>
-
-                                <article class="item">
-                                    <a href="#" class="thumb">
-                                        <span class="fullimage cover bg4" role="img"></span>
-                                    </a>
-                                    <div class="info">
-                                        <h4 class="title usmall"><a href="#">A fierce battle is going on between the two in the game</a></h4>
-                                        <span>28 September, 2020</span>
-                                    </div>
-                                </article>
-                            </section>
-
-                            <section class="widget widget_stay_connected">
-                                <h3 class="widget-title">Stay connected</h3>
-
-                                <ul class="stay-connected-list">
-                                    <li>
-                                        <a href="#">
-                                            <i class='bx bxl-facebook'></i>
-                                            120,345 Fans
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#" class="twitter">
-                                            <i class='bx bxl-twitter'></i>
-                                            25,321 Followers
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#" class="linkedin">
-                                            <i class='bx bxl-linkedin'></i>
-                                            7,519 Connect
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#" class="youtube">
-                                            <i class='bx bxl-youtube'></i>
-                                            101,545 Subscribers
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#" class="instagram">
-                                            <i class='bx bxl-instagram'></i>
-                                            10,129 Followers
-                                        </a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#" class="wifi">
-                                            <i class='bx bx-wifi'></i>
-                                            952 Subscribers
-                                        </a>
-                                    </li>
-                                </ul>
-                            </section>
-
-                            <section class="widget widget_newsletter">
-                                <div class="newsletter-content">
-                                    <h3>Subscribe to our newsletter</h3>
-                                    <p>Subscribe to our newsletter to get the new updates!</p>
-                                </div>
-
-                                <form class="newsletter-form" data-toggle="validator">
-                                    <input type="email" class="input-newsletter" placeholder="Enter your email" name="EMAIL" required autocomplete="off">
-
-                                    <button type="submit">Subscribe</button>
-                                    <div id="validator-newsletter" class="form-result"></div>
-                                </form>
+                                <h3 class="widget-title">Facebook Page</h3>
+                                <iframe loading="lazy" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                                width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                                allowTransparency="true" allow="encrypted-media"></iframe>
                             </section>
 
                             <section class="widget widget_most_shared">
